--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^9.4.0",
     "form-data": "^4.0.0",
     "get-audio-duration": "^4.0.1",
+    "get-video-duration": "^4.1.0",
     "mobx": "^6.12.4",
     "openai": "^4.44.0",
     "prettier": "^3.2.5",
